2009-09-17  Sanel <karijes@users.sourceforge.net>

	* edelib/IconLoader.h:
	* src/IconLoader.cpp: by default, return icon size as requested, even if
	we are need to scale it

2009-09-08  Sanel <karijes@users.sourceforge.net>

	* edelib/List.h: fix a bug when erase() would be called in the loop with
	already assigned end() value
	* test/list.cpp: test for above bug

2009-09-07  Sanel <karijes@users.sourceforge.net>

	* Jamrules: fix error value propagation to the shell

2009-09-03  Sanel <karijes@users.sourceforge.net>

	* configure.in: removed last change in this file 
	* Jamrules: 'jam tests' will do necessary stuff to allow running tests
	when edelib was compiled as shared library
	* INSTALL:
	* README: update, fixed some typos
	* src/tinyscheme/init.scm: dumping IO code
	* src/tinyscheme/init.scm.orig: orginal file that came with tinyscheme
	* edelib/Resource.h:
	* src/Resource.cpp: 
	* test/resource.cpp: allow find_data() to have default prefix, as
	find_config() too; added find_in_config_dir(); allow prefix to
	have NULL value, so it can be ignored

2009-09-02  Sanel <karijes@users.sourceforge.net>

	* src/Theme.cpp: better code for checking if scheme stuff is loaded
	* src/tinyscheme/scheme.c: set proper retcode value when illegal token was
	found
	* test/theme.cpp:
	* test/theme-bad.et: test for special case where tinyscheme code had to be
	modified
	* src/tinyscheme/scheme.h: disable math facility
	* src/tinyscheme/scheme.c: do not call malloc.h; FreeBSD does not like it
	* configure.in: make libraries visible if edelib was compiled as shared
	library when EDELIB_USE_LOCALDIR was set

2009-09-01  Sanel <karijes@users.sourceforge.net>

	* edelib/Theme.h:
	* src/Theme.cpp: clear() made public; small fix with string type
	recognition
	* test/theme.cpp: added tests for theme

2009-08-29  Sanel <karijes@users.sourceforge.net>

	* edelib/EdbusConnection.h:
	* doc/DBus.dox: moving D-BUS info documentation in separate file